fixed flex wrapping on safari

--- a/doks-theme/_sass/generic/_base.scss
+++ b/doks-theme/_sass/generic/_base.scss
@@ -376,3 +376,8 @@ button {
     padding: 0 2rem;
   }
 }
+
+.row.vertical-align:after,
+.row.vertical-align:before {
+  display: none;
+}
